hard-gists/2083178/run.log
=== Docker Run Log for 2083178 ===
Started at: Mi 29. Okt 12:59:02 CET 2025

[2025-10-29 12:59:02] START: Running container for 2083178
[2025-10-29 12:59:02] SUCCESS: Container 16ada11d5da4d039263ea065a6add2bd06d4656f79b5cae89856e02677e5bcce started for 2083178
=== Container logs for 2083178 ===
  File "/snippet.py", line 36
    print 'Fetching page %s' % (page,)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2083178 ===
[2025-10-29 12:59:04] INFO: Container 16ada11d5da4d039263ea065a6add2bd06d4656f79b5cae89856e02677e5bcce has stopped
